# voxtype

./: .env.example  .env.prod.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
server/: Dockerfile  README.md  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 25d9d52ace8d_add_github_username_to_whitelist.py  4b2a1f9c6d7e_add_user_dictionary_unique_pattern.py  5c4a2a1b7a9f_create_global_dictionary_requests.py  8b4a7f2c1d01_create_backup_settings.py  9a3f1d7d7e2c_add_is_rejected_to_user_dictionary.py  e97541ff3653_create_users_table.py
server/app/: __init__.py  config.py  main.py
server/app/admin/: backup_files.py  backup_restore.py  backup_run.py  backup_settings.py  dictionary.py  dictionary_requests.py  users.py  whitelist.py
server/app/api/: __init__.py  dictionary.py  dictionary_requests.py  me.py  status.py  transcribe.py
server/app/auth/: __init__.py  routes.py
server/app/models/: __init__.py  backup_settings.py  global_dictionary_request.py  user.py  user_dictionary.py  whitelist.py
server/app/services/: __init__.py  audio_utils.py  backup.py  backup_restore.py  backup_scheduler.py  dictionary_normalize.py  postprocess.py  (+2 more)
server/tests/: conftest.py  test_admin_api.py  test_audio_utils.py  test_backup.py  test_backup_api.py  test_backup_lock.py  test_backup_runner.py  test_backup_scheduler.py  test_dictionary_api.py  test_integration.py  test_models.py  test_postprocess.py  test_sample.py  test_status.py  test_transcribe.py  test_vad_utils.py  test_whisper_client.py  test_whitelist.py
(+84 files in other folders)
